force-app/main/default/objects/Subscription_Contact__c/Subscription_Contact__c.object-meta.xml
<CustomObject>
    <label>Product Customer Contact</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Subscription Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Customer Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>