force-app/main/default/objects/Subscription_Contact__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>