force-app/main/default/objects/Subscription_Contact__c/fields/CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating__c</fullName>
    <formula>TEXT(Subscription__r.CSM_Health_Rating__c)</formula>
    <label>CSM Health Rating</label>
    <type>Text</type>
</CustomField>