force-app/main/default/objects/Subscription_Contact__c/fields/Intapp_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Contact_Number__c</fullName>
    <formula>Contact__r.IntApp_Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intapp Contact Number</label>
    <type>Text</type>
</CustomField>