force-app/main/default/objects/Subscription_Contact__c/fields/Reference_Used__c.field-meta.xml
<CustomField>
    <fullName>Reference_Used__c</fullName>
    <label># Reference Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>