force-app/main/default/objects/Subscription_Contact__c/fields/Subscription_Account__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Account__c</fullName>
    <formula>Subscription__r.Account__r.Name</formula>
    <label>Product Customer Account</label>
    <type>Text</type>
</CustomField>