force-app/main/default/objects/Subscription_Contact__c/listViews/Unaudited_Primary_Contacts.listView-meta.xml
<ListView>
    <fullName>Unaudited_Primary_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Subscription_Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Auditor__c</columns>
    <columns>Audited_Date__c</columns>
    <columns>CRD__c</columns>
    <columns>CSM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Primary_Subscription__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TFG_Subscription__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Subscription_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Auditor__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unaudited Primary Contacts</label>
</ListView>